[package]
edition = "2021"
name = "galactic_merchants"
version = "0.1.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.1", features = ["dynamic_linking", "mp3"] }
bevy_eventlistener = "0.8.1"
bevy_mod_picking = "0.20.1"
convert_case = "0.6.0"
log = { version = "0.4.22", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
rand = "0.8.5"
